tdf#156348 sw: fix crash on converting text to table with SwSetExpField

The problem is that the table node only gets a SwFrameFormat assigned at
the end of the operation after all the nodes have been split etc., and
moving a field into a newly split node calls
sw::FindNeighbourFrameForNode() which needs to handle table node without
SwFrameFormat now when going backwards (not when going forwards because
the table node is always before the nodes in the table).

(regression from commit 9dc6e2c9062725ef1f9d7e321cae5f4dbe8ca749)

Change-Id: Ia0c1f7d7b14f525aa8de4a2b6492c39b59f31052
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180914
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit b5967157b37904219865fd847b20938b3ccfbd72)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180918
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>